syntax = "proto3";

import "filters.proto";
import "types.proto";

package co.topl.genus.services;

service BlocksQuery {
  rpc Query (QueryBlocksReq) returns (QueryBlocksRes);
}

message QueryBlocksReq {
  BlockFilter filter = 1;
  uint32 confirmation_depth = 2;
}

message QueryBlocksRes {
  repeated Block blocks = 1;
}
